# voproshalych

./: .env.example  .env.lightrag.example  .gitignore  .gitlab-ci.yml  CONTRIBUTING.MD  README.md  docker-compose.yml
admin-service/: Dockerfile  pyproject.toml
admin-service/src/admin/: auth.py  config.py  db.py  main.py  queries.py  schemas.py
admin-service/src/admin/api/: __init__.py
admin-service/src/admin/api/routes/: health.py  qa.py  stats.py  tasks.py  users.py
admin-ui/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx
bot-service/: .dockerignore
bot-service/core/: Dockerfile  config.py  db.py  messages.py
bot-service/docs/: dialog-context.md  overview.md
db/: Dockerfile
db/postgres/: Dockerfile  init-extensions.sh
docs/: network_architecture.md  onboarding_guide.md  pipeline-user-query.md  query_pipeline.md  v2_architecture.mmd  v2_architecture_LEGEND.mmd
qa-service/: .dockerignore  Dockerfile  parser.py  processing.py  pyproject.toml  requirements.txt  save_models.py
qa-service/benchmarks/: README.md  __main__.py  generate_hard_dataset.py  import_to_lightrag.py  metrics.py  prepare_v1_documents.py  (+1 more)
scripts/: cleanup-db.sh  cleanup_postgres.sql  fix_age_oid.sh
v3/: README.md  docker-compose.yml
v3/kb-service/: Dockerfile  pyproject.toml
v3/kb-service/src/kb/: chunking.py  config.py  embedding.py  main.py  models.py  preprocessing.py  tools.py
v3/kb-service/src/kb/parsers/: __init__.py  confluence_help.py  confluence_study.py  utmn.py  utmn_news.py
(+114 files in other folders)
